tdf#118890 subtract 100% from by values of animScale.

Despite that by values should be offset values instead of
ending values, what we got from pptx seems to be the later,
that we have to subtract 100% from the by values to get
offset values for slideshow.

Change-Id: I7eb9981210ea9998dae0de8f22c155b394e5abeb